# BTD5-Save-Transfer-Tool

./: CMakeLists.txt  README.md  adb.cpp  adb.h  decrypted.json  dgutil.cpp  dgutil.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  outlinelabel.cpp  outlinelabel.h  resources.qrc
.github/workflows/: cmake-single-platform.yml
